# Teacher-Safe-Local-File-Scanner

./: .gitignore  BEGINNERS_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-optional.txt  requirements.txt
examples/: .gitignore  sample_report.json
scanner/: __init__.py  heuristics.py  main.py  reporters.py  scanner_core.py  utils.py
scanner/detectors/: office_rules.py  pdf_rules.py
scripts/: windows_add_context_menu.reg
teacher-safe-scanner/: .gitignore  BEGINNERS_GUIDE.md  LICENSE  README.md  SAFETY.md  mypy.ini  pyproject.toml  requirements-optional.txt  requirements.txt  setup.cfg
teacher-safe-scanner/.github/workflows/: ci.yml  release.yml
teacher-safe-scanner/docs/: README.md
teacher-safe-scanner/examples/: generate_benign_samples.py
teacher-safe-scanner/examples/benign_samples/: sample_text.txt
teacher-safe-scanner/scanner/: __init__.py  __main__.py  detectors.py  gui.py  heuristics.py  main.py  quarantine.py  reporters.py  scanner_core.py  utils.py
teacher-safe-scanner/scanner/detectors/: __init__.py  image_rules.py  zip_rules.py
teacher-safe-scanner/scanner/reporting/: html_theme.css
teacher-safe-scanner/scripts/: build_pyinstaller.ps1  build_pyinstaller.sh
teacher-safe-scanner/tests/: test_detectors.py  test_heuristics.py  test_pdf_rules.py  test_zip_rules.py  utils_make_samples.py
tests/: conftest.py  test_image_rules.py  test_integration.py  test_office_rules.py
